...
                quotesSection
            }
            .padding()
            .padding(.bottom, Metrics.bottomPadding)
            .frame(maxWidth: .infinity, alignment: .topLeading)
        }
        .accessibilityIdentifier("bookmarksRoot")
        .scrollIndicators(.hidden)
        .background(Color.background)
        .onAppear {
            viewModel.loadData()
        }
        .fullScreenCover(isPresented: $viewModel.isBookDetailsPresented) {
...
