...
                    }
                }
                .padding()
                .padding(.bottom, Metrics.bottomPadding)
                .frame(maxWidth: .infinity, alignment: .topLeading)
            }
            .accessibilityIdentifier("searchRoot")
            .scrollIndicators(.hidden)
            .background(Color.background)
            .navigationTitle("")
            .searchable(
                text: $searchText,
                placement: .navigationBarDrawer(displayMode: .always),
...
